@@ -1,0 +1,5 @@
+pkgdatadir = $(datadir)/games/@PACKAGE@/objects
+
+pkgdata_DATA = basic_brick.py
+
+EXTRA_DIST = $(pkgdata_DATA)
