@@ -1,0 +1,4 @@
+# This file implements a basic_brick object
+
+def basic_brick_hit():
+    print "basic_brick_hit"
